2001-05-18  Tom Tromey  <tromey@redhat.com>

	* automake.in: Reverted erroneous checkin.

2001-05-18  Akim Demaille  <akim@epita.fr>

	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Be robust
	to missing `install-info'.

2001-05-17  Tom Tromey  <tromey@redhat.com>

	* automake.in (lang_c_finish): Use `rm -f'.

	* automake.in (lang_c_finish): Remove _.c file if ansi2knr fails.
	* tests/Makefile.am (TESTS): Added new file.
	* tests/ansi5.test: New file.

2001-05-17  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/install.am (install-strip): Set INSTALL_PROGRAM_ENV if
	STRIP is not empty.
	* m4/strip.m4 (AM_PROG_INSTALL_STRIP): Set INSTALL_STRIP_PROGRAM
	to install-sh unconditionally.  Don't set INSTALL_STRIP_PROGRAM_ENV.
	* automake.texi (Requirements): Document the use of the STRIP
	variable in cross-compilation environments.

2001-05-17  Tom Tromey  <tromey@redhat.com>

	* m4/depend.m4 (AM_DEPENDENCIES): If depcomp doesn't exist, revert
	to no dependency tracking.
	* tests/Makefile.am (TESTS): Added depcomp2.test.
	* tests/depcomp2.test: New file.  From Pavel Roskin.

	* lib/depcomp (aix): Bug fix and simplification from Larry Jones.

	* lib/depcomp (tru64): New dependency tracking mode.

	Fix for PR automake/159:
	* lib/depcomp (aix): Rewrote.
	(sgi): Likewise.

	Fix for PR automake/174:
	* tests/Makefile.am (XFAIL_TESTS): Removed comment3.test.
	* automake.in (read_am_file): Warn if `#' is at start of rule.

2001-05-16  Tom Tromey  <tromey@redhat.com>

	For PR automake/174:
	* tests/Makefile.am (TESTS): Added comment3.test.
	(XFAIL_TESTS): Likewise.
	* tests/comment3.test: New file.

	Fix for PR automake/175:
	* tests/Makefile.am (XFAIL_TESTS): Removed make.test.
	* m4/make.m4 (AM_MAKE_INCLUDE): Omit `Entering directory' and
	`Leaving directory' messages.

	For PR automake/175:
	* tests/Makefile.am (XFAIL_TESTS): Added make.test.
	* tests/make.test: Run test with `make -w'.

	* tests/Makefile.am (TESTS): Removed maintclean.test.