@@ -1238,9 +1238,12 @@ sub generate_makefile
     &handle_programs;
     &handle_scripts;
 
+    # This must run first so that the ANSI2KNR definition is generated
+    # before it is used by the _.c rules.  This works around an
+    # obscure bug.
+    &handle_compile;
     # This must be run after all the sources are scanned.
     &handle_languages;
-    &handle_compile;
 
     # Re-init SOURCES.  FIXME: other code shouldn't depend on this
     # (but currently does).
