@@ -1,3 +1,9 @@
+2001-05-19  Tom Tromey  <tromey@redhat.com>
+
+	For for ansi2knr report from Harlan Stenn:
+	* automake.in (generate_makefile): Run handle_compile before
+	handle_languages.
+
 2001-05-18  Tom Tromey  <tromey@redhat.com>
 
 	* automake.in: Reverted erroneous checkin.
